--- a/pages/osu-personal-introduce.html
+++ b/pages/osu-personal-introduce.html
@@ -22,14 +22,23 @@
 			<p>Hello, there.<br>
 			Welcome to my website.</p>
 			
-			<p>Play style: alternating.<br>
-			Keyboard and mouse.<br>
-			Mouse config:<br>
-			1x, no raw.<br>
-			It's not a good idea to change dpi in osu,<br>
-			it'll cause the mouse drift.<br>
-			Because I'm using linux so mainly config in libinput.<br>
-			<u>"AccelSpeed" "-0.9"</u></p>
+			<div class="subcontainer">
+				<p>Play style: alternating.<br>
+				Keyboard and mouse.<br>
+				Mouse config:<br>
+				1x, no raw.<br>
+				It's not a good idea to change dpi in osu,<br>
+				it'll cause the mouse drift.<br>
+				Because I'm using linux so mainly config in libinput.<br></p>
+
+				<p>50-mouse-accel.conf<br>
+				"AccelProfile" "<u>flat</u>"<br>
+				"AccelSpeed" "-0.37"</p>
+
+				<p>Here are two AccelProfile:<br>
+				<u>adaptive</u>: High precision but may lag.<br>
+				<u>flat</u>: Stable but not precise.</p>
+			</div>
 
 			<p>Disclaim<br>
 			I dont create skin so they're modified.</p>
