--- a/pages/osu-personal-introduce.html
+++ b/pages/osu-personal-introduce.html
@@ -25,8 +25,7 @@
 			<div class="subcontainer">
 				<p>Play style: alternating.<br>
 				Keyboard and mouse.<br>
-				Mouse config:<br>
-				1x, no raw.<br>
+				Mouse config: 1x, no raw.<br>
 				It's not a good idea to change dpi in osu,<br>
 				it'll cause the mouse drift.<br>
 				Because I'm using linux so mainly config in libinput.<br></p>
@@ -43,15 +42,10 @@
 			<p>Disclaim<br>
 			I dont create skin so they're modified.</p>
 
-			<p>2024-01-23 updated<br>
+			<p>2024-01-26 updated<br>
 			Skin: #inabakumori <b>16:9</b><br>
 			Mediafire: <a href="https://mediafire.com/file/kgq6cp0vkyu9xhq/#inabakumori.osk/file">Download</a><br>
 			Github: <a href="./pkgs/#inabakumori.osk">Download</a></p>
-
-			<p>2024-01-07 updated<br>
-			Skin: #mikuAutumn <b>16:9</b><br>
-			Mediafire: <a href="https://mediafire.com/file/21g5w005s0u0ujp/%2523mikuAutumn.osk/file"
-						  target="_self">Download</a></p>
 		</div>
 
 		<h2>Others</h2>
