--- a/pages/osu-personal-introduce.html
+++ b/pages/osu-personal-introduce.html
@@ -37,6 +37,11 @@
 				<p>Here are two AccelProfile:<br>
 				<u>adaptive</u>: High precision but may lag.<br>
 				<u>flat</u>: Stable but not precise.</p>
+
+				<p>I have two accounts: one for mainly play,<br>
+				the other one for training.<br>
+				cutt37(Main)<br>
+				account-t37(Train)</p>
 			</div>
 
 			<p>Disclaim<br>
