--- a/pages/osu-personal-introduce.html
+++ b/pages/osu-personal-introduce.html
@@ -27,12 +27,14 @@
 				Keyboard and mouse.<br>
 				Mouse config: 1x, no raw.<br>
 				It's not a good idea to change dpi in osu,<br>
-				it'll cause the mouse drift.<br>
-				Because I'm using linux so mainly config in libinput.<br></p>
+				it'll cause the mouse drift.<br></p>
+				
+				<p>Because I'm using linux so mainly config in libinput.<br></p>
+
 
 				<p>50-mouse-accel.conf<br>
 				"AccelProfile" "<u>flat</u>"<br>
-				"AccelSpeed" "-0.37"</p>
+				"AccelSpeed" "-0.462"</p>
 
 				<p>Here are two AccelProfile:<br>
 				<u>adaptive</u>: High precision but may lag.<br>
