--- a/pages/osu-personal-introduce.html
+++ b/pages/osu-personal-introduce.html
@@ -34,7 +34,8 @@
 
 				<p>50-mouse-accel.conf<br>
 				"AccelProfile" "<u>flat</u>"<br>
-				"AccelSpeed" "-0.462"</p>
+				"AccelSpeed" "-0.46246"<br>
+				It's necessary to use precise float num if you're using flat.</p>
 
 				<p>Here are two AccelProfile:<br>
 				<u>adaptive</u>: High precision but may lag.<br>
