--- a/index.html
+++ b/index.html
@@ -23,6 +23,24 @@
 	
 	<h1>> Archlinux installation._</h1>
 	<div id="Article">
+
+		<h2>Before we start, please notice ...</h2>
+		<div class="container">
+			<p>1. The guide <b>only</b> helps you install one os.<br>
+			2. <b>All</b> your data will be destoryed when you format the disk.<br>
+			3. Though wine can execute windows program but it only supports <b>x86_32(32 bits)</b>.<br>
+			4. Actually <u>archinstall</u> is enough.<br>
+			Just type it in console and it'll start the installation.<br>
+			5. I suggest you to see arch official wiki.<br>
+			<a href="https://wiki.archlinux.org/title/Installation_guide">
+				First pre-install
+			</a><br>
+			<a href="https://wiki.archlinux.org/title/General_recommendations">
+				1.1 2.1 2.2 2.3 2.5 pt4 pt5 pt6 are necessary
+			</a><br>
+			6. Take your own responsibility.</p>
+		</div>
+
 		<h2>1.Connect to the internet(wireless)</h2>
 		<div class="container">
 			<p><u>ifconfig</u> to check the network card.<br>
@@ -108,7 +126,8 @@
 				<p>Graphic card driver and microcode:<br>
 				Graphic card driver:<br>
 				intel: [modesetting(Ignore this),<br>
-				<u>vulkan-intel</u>,<u>intel-media-driver</u>(&gt;=gen9)]<br>
+				<u>vulkan-intel</u>,<u>intel-media-driver</u>(&gt;=gen5)<br>
+				,<u>libva-intel-driver</u>(GMA4500 to gen8)]<br>
 				amd: <u>xf86-video-amd</u> <u>xf86-video-radeon</u></p>
 
 				<p>Microcode:<br>
