--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
 
 		<h2>Before we start, please notice ...</h2>
 		<div class="container">
-			<p>1. The guide <b>only</b> helps you install one os.<br>
+			<p>1. This is NOT two os installation guide.<br>
 			2. <b>All</b> your data will be destoryed when you format the disk.<br>
 			3. Though wine can execute windows program but it only supports <b>x86_32(32 bits)</b>.<br>
+			If you are going to play most games on game platform, I still suggest you'd better keep windows.<br>
 			4. Actually <u>archinstall</u> is enough.<br>
 			Just type it in console and it'll start the installation.<br>
 			5. I suggest you to see arch official wiki.<br>
@@ -38,7 +39,7 @@
 			<a href="https://wiki.archlinux.org/title/General_recommendations">
 				1.1 2.1 2.2 2.3 2.5 pt4 pt5 pt6 are necessary
 			</a><br>
-			6. Take your own responsibility.</p>
+			6. <b>Take your own responsibility</b>.</p>
 		</div>
 
 		<h2>1.Connect to the internet(wireless)</h2>
