--- a/pages/config.html
+++ b/pages/config.html
@@ -67,9 +67,9 @@
 			<p>Slim theme:<br>
 			sudo systemctl enable slim<br>
 			sudo vim /etc/slim.conf<br>
-			Type <u>/current_theme</u> to search.<br>
+			Type /current_theme to search.<br>
 			Find this line of the code:<br>
-			<u>current_theme archlinux-simplyblack</u></p>
+			current_theme archlinux-simplyblack</p>
 
 			<p>Dark gtk theme:<br>
 			sudo echo GTK-THEME=Adwaita:dark &gt;&gt; /etc/environment</p>
