--- a/404.html
+++ b/404.html
@@ -5,14 +5,10 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<link rel="stylesheet" type="text/css" href="main.css">
-	<link rel="stylesheet" type="text/css" href="fonts.css">
-	<link rel="stylesheet" type="text/css" href="colors.css">
-
 	<script type="text/javascript" data-domain="cutt37.is-a.dev" src="https://analytics.is-a.dev/js/script.js" defer></script>
 </head>
 
 <body>
-<p>Page not found... <a onclick="history.back()">Go back</a></p>
+<p>Page not found ;&lpar; <a onclick="history.back()">Go back</a></p>
 </body>
 </html>
