--- a/pages/osu-personal-introduce.html
+++ b/pages/osu-personal-introduce.html
@@ -63,13 +63,11 @@
 
 		<h2>Skin</h2>
 		<div class="container">
-			<p>Disclaim<br>
-			I dont create skin so they're modified.</p>
-
-			<p>2024-01-30 updated<br>
-			Skin: #inabakumori <b>16:9</b><br>
-			Mediafire: <a href="https://mediafire.com/file/kgq6cp0vkyu9xhq/#inabakumori.osk/file">Download</a><br>
-			Github: <a href="./pkgs/#inabakumori.osk">Download</a></p>
+			<p>My first created skin.<br>
+			I like simple skin so it might be ugly.<br>
+			Except hitsounds, the other objects are created by me(with gimp tool).<br>
+			Mediafire: <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Download</a><br>
+			Github: <a href="./pkgs/Idontknow.osk">Download</a></p>
 		</div>
 
 		<h2>Others</h2>
