--- a/pages/osu-personal-introduce.html
+++ b/pages/osu-personal-introduce.html
@@ -45,7 +45,7 @@
 			&emsp;Driver "libinput"<br>
 			&emsp;MatchIsPointer "yes"<br>
 			&emsp;Option "AccelProfile" "<u>flat</u>"<br>
-			&emsp;Option "AccelSpeed" "-0.46246"<br>
+			&emsp;Option "AccelSpeed" "-0.46248"<br>
 			EndSection</p>
 			
 			<p>You can get your mouse with <u>xinput</u> command.<br>
@@ -63,8 +63,8 @@
 
 		<h2>Skin</h2>
 		<div class="container">
-			<p>My first created skin.<br>
-			I like simple skin so it might be ugly.<br>
+			<p>Update 2024-02-02<br>
+			My first created skin.(certainly ugly)<br>
 			Except hitsounds, the other objects are created by me(with gimp tool).<br>
 			Mediafire: <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Download</a><br>
 			Github: <a href="./pkgs/Idontknow.osk">Download</a></p>
