--- a/pages/osu-personal-introduce.html
+++ b/pages/osu-personal-introduce.html
@@ -45,12 +45,11 @@
 			&emsp;Driver "libinput"<br>
 			&emsp;MatchIsPointer "yes"<br>
 			&emsp;Option "AccelProfile" "<u>flat</u>"<br>
-			&emsp;Option "AccelSpeed" "-0.46248"<br>
+			&emsp;Option "AccelSpeed" "-0.454"<br>
 			EndSection</p>
 			
 			<p>You can get your mouse with <u>xinput</u> command.<br>
-			Then paste it inside of the Identifier quotes.<br>
-			It's necessary to use precise float num if you're using flat.</p>
+			Then paste it inside of the Identifier quotes.</p>
 
 			<p>What is AccelProfile?<br>
 			For example, when you are playing osu,<br>
