--- a/pages/config.html
+++ b/pages/config.html
@@ -46,6 +46,16 @@
 				dunst feh ibus ibus-libpinyin picom flameshot mpv \<br>
 				zsh zsh-{completions,autosuggestions,syntax-highlighting} \<br>
 				chromium alacritty xss-lock</p>
+
+				<p><u>pcmanfm</u> is a file manager.<br>
+				<u>xarchiver</u> extract or compress sth.<br>
+				<u>dmenu</u> like 'Windows Startup'<br>
+				<u>dunst</u> is a notifier.<br>
+				<u>feh</u> is a lightweight image viewer.<br>
+				<u>ibus</u> is a input method.<br>
+				<u>flameshot</u> is a screenshot.<br>
+				<u>mpv</u> is a video(or audio) player.<br>
+				<u>zsh</u> is one of the linux shells.<br></p>
 			</div>
 
 			<p>Configuration:<br>
