--- a/pages/others.html
+++ b/pages/others.html
@@ -22,7 +22,7 @@
 	</div>
 
 	<div id="Article">
-		<h2>Download osu</h2>
+		<h2>Execute x86_32 .exe file</h2>
 		<div class="container">
 			<p>vim /etc/pacman.conf<br>
 			Uncomment [multilib] and mirror</p>
