--- a/pages/osu-personal-introduce.html
+++ b/pages/osu-personal-introduce.html
@@ -22,7 +22,8 @@
 			<p>Hello, there.<br>
 			Welcome to my website.</p>
 			
-			<p>Play style: alternating.<br>
+			<p>Status: may not active.(I lost interest)<br>
+			Play style: alternating.<br>
 			Keyboard and mouse.<br>
 			Mouse config: 1x, no raw.<br>
 			It's not a good idea to change dpi in osu,<br>
