--- a/pages/osu-personal-introduce.html
+++ b/pages/osu-personal-introduce.html
@@ -22,7 +22,7 @@
 			<p>Hello, there.<br>
 			Welcome to my website.</p>
 			
-			<p>Status: may not active.(I lost interest)<br>
+			<p>Status: may not active.<br>
 			Play style: alternating.<br>
 			Keyboard and mouse.<br>
 			Mouse config: 1x, no raw.<br>
@@ -63,8 +63,8 @@
 
 		<h2>Skin</h2>
 		<div class="container">
-			<p>Update 2024-02-04<br>
-			My first created skin.(certainly ugly)<br>
+			<p>Update 2024-02-05<br>
+			My first created skin.(notice: it's <b>HD</b>)<br>
 			Except hitsounds, the other objects are created by me(with gimp tool).<br>
 			Mediafire: <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Download</a><br>
 			Github: <a href="./pkgs/Idontknow.osk">Download</a></p>
