--- a/pages/osu-personal-introduce.html
+++ b/pages/osu-personal-introduce.html
@@ -45,8 +45,8 @@
 			&emsp;Identifier ""<br>
 			&emsp;Driver "libinput"<br>
 			&emsp;MatchIsPointer "yes"<br>
-			&emsp;Option "AccelProfile" "<u>flat</u>"<br>
-			&emsp;Option "AccelSpeed" "-0.454"<br>
+			&emsp;Option "AccelProfile" "<u>adaptive</u>"<br>
+			&emsp;Option "AccelSpeed" "-1"<br>
 			EndSection</p>
 			
 			<p>You can get your mouse with <u>xinput</u> command.<br>
