--- a/pages/osu-personal-introduce.html
+++ b/pages/osu-personal-introduce.html
@@ -45,8 +45,8 @@
 			&emsp;Identifier ""<br>
 			&emsp;Driver "libinput"<br>
 			&emsp;MatchIsPointer "yes"<br>
-			&emsp;Option "AccelProfile" "<u>adaptive</u>"<br>
-			&emsp;Option "AccelSpeed" "-1"<br>
+			&emsp;Option "AccelProfile" "<u>flat</u>"<br>
+			&emsp;Option "AccelSpeed" "-0.479"<br>
 			EndSection</p>
 			
 			<p>You can get your mouse with <u>xinput</u> command.<br>
@@ -64,7 +64,7 @@
 		<h2>Skin</h2>
 		<div class="container">
 			<p>Update 2024-02-05<br>
-			My first created skin.(notice: it's <b>HD</b>)<br>
+			My first created skin.(notice: it's <b>@2x</b>)<br>
 			Except hitsounds, the other objects are created by me(with gimp tool).<br>
 			Mediafire: <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Download</a><br>
 			Github: <a href="./pkgs/Idontknow.osk">Download</a></p>
