--- a/pages/osu-personal-introduce.html
+++ b/pages/osu-personal-introduce.html
@@ -22,12 +22,7 @@
 			<p>Hello, there.<br>
 			Welcome to my website.</p>
 			
-			<p>Status: may not active.<br>
-			Play style: alternating.<br>
-			Keyboard and mouse.<br>
-			Mouse config: 1x, no raw.<br>
-			It's not a good idea to change dpi in osu,<br>
-			it'll cause the mouse drift.<br></p>
+			<p>Status: may not active.</p>
 			
 			<p>I have two accounts: one for mainly play,<br>
 			the other one for training.<br>
@@ -37,7 +32,8 @@
 
 		<h2>Mouse config on linux</h2>
 		<div class="container">
-			<p>Create a config file under:<br>
+			<p>I don't recommended to change it ingame(it'll cause the mouse drift).<br>
+			Create a config file under:<br>
 			/usr/share/X11/xorg.conf.d</p>
 			
 			<p>50-mouse-accel.conf<br>
@@ -63,7 +59,7 @@
 
 		<h2>Skin</h2>
 		<div class="container">
-			<p>Update 2024-02-08<br>
+			<p>Update 2024-02-10<br>
 			My first created skin.(notice: it's <b>@2x</b>)<br>
 			Except hitsounds, the other objects are created by me(with gimp tool).<br>
 			Mediafire: <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Download</a><br>
