--- a/pages/osu-personal-introduce.html
+++ b/pages/osu-personal-introduce.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="../colors.css">
 	
 	<script type="text/javascript" src="../main.js" defer></script>
+	<script type="text/javascript" src="./typing.js" defer></script>
 	<script type="text/javascript" data-domain="cutt37.is-a.dev" src="https://analytics.is-a.dev/js/script.js" defer></script>
 </head>
 
@@ -59,11 +60,11 @@
 
 		<h2>Skin</h2>
 		<div class="container">
-			<p>Update 2024-02-10<br>
+			<p>Update 2024-02-11<br>
 			My first created skin.(notice: it's <b>@2x</b>)<br>
 			Except hitsounds, the other objects are created by me(with gimp tool).<br>
 			Mediafire: <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Download</a><br>
-			Github: <a href="./pkgs/Idontknow.osk">Download</a></p>
+			Github: <a href="./pkgs/Idont.osk">Download</a></p>
 		</div>
 
 		<h2>Others</h2>
