--- a/pages/osu-personal-introduce.html
+++ b/pages/osu-personal-introduce.html
@@ -11,7 +11,6 @@
 	<link rel="stylesheet" type="text/css" href="../colors.css">
 	
 	<script type="text/javascript" src="../main.js" defer></script>
-	<script type="text/javascript" src="./typing.js" defer></script>
 	<script type="text/javascript" data-domain="cutt37.is-a.dev" src="https://analytics.is-a.dev/js/script.js" defer></script>
 </head>
 
@@ -31,9 +30,10 @@
 			account-t37(Train)</p>
 		</div>
 
-		<h2>Mouse config on linux</h2>
+		<h2>Some configs</h2>
 		<div class="container">
-			<p>I don't recommended to change it ingame(it'll cause the mouse drift).<br>
+			<p>Universal offset: -10ms.<br>
+			I don't recommended to change it ingame(it'll cause the mouse drift).<br>
 			Create a config file under:<br>
 			/usr/share/X11/xorg.conf.d</p>
 			
@@ -43,7 +43,7 @@
 			&emsp;Driver "libinput"<br>
 			&emsp;MatchIsPointer "yes"<br>
 			&emsp;Option "AccelProfile" "<u>flat</u>"<br>
-			&emsp;Option "AccelSpeed" "-0.479"<br>
+			&emsp;Option "AccelSpeed" "-0.465"<br>
 			EndSection</p>
 			
 			<p>You can get your mouse with <u>xinput</u> command.<br>
@@ -54,13 +54,12 @@
 			<u>adaptive</u>: <b>Mouse movement</b> is very important,<br>
 			which you should put focus on mouse.<br>
 			<u>flat</u>: <b>Cursor movement</b> is very important,
-			which you just need to focus on the screen(cursor).<br>
-			It's pretty hard to explain these two accel method :(</p>
+			which you just need to focus on the screen(cursor).</p>
 		</div>
 
 		<h2>Skin</h2>
 		<div class="container">
-			<p>Update 2024-02-19<br>
+			<p>Update 2024-02-20<br>
 			My first created skin.(notice: it's <b>@2x</b>)<br>
 			Except hitsounds, the other objects are created by me(with gimp tool).<br>
 			Mediafire: <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Download</a><br>
