--- a/pages/osu-personal-introduce.html
+++ b/pages/osu-personal-introduce.html
@@ -32,9 +32,9 @@
 
 		<h2>Some configs</h2>
 		<div class="container">
-			<p>Universal offset: -10ms.<br>
-			I don't recommended to change it ingame(it'll cause the mouse drift).<br>
-			Create a config file under:<br>
+			<p>Universal offset: -8ms.</p>
+			
+			<p>Mouse acceleration:<br>
 			/usr/share/X11/xorg.conf.d</p>
 			
 			<p>50-mouse-accel.conf<br>
