--- a/pages/osu-personal-introduce.html
+++ b/pages/osu-personal-introduce.html
@@ -22,7 +22,7 @@
 			<p>Hello, there.<br>
 			Welcome to my website.</p>
 			
-			<p>Status: may not active.</p>
+			<p>Status: Maybe acitve.</p>
 			
 			<p>I have two accounts: one for mainly play,<br>
 			the other one for training.<br>
@@ -32,12 +32,10 @@
 
 		<h2>Some configs</h2>
 		<div class="container">
-			<p>Universal offset: -8ms.</p>
-			
 			<p>Mouse acceleration:<br>
 			/usr/share/X11/xorg.conf.d</p>
 			
-			<p>50-mouse-accel.conf<br>
+			<p>50-mouse-accel.cfonf<br>
 			Section "InputClass"<br>
 			&emsp;Identifier ""<br>
 			&emsp;Driver "libinput"<br>
@@ -59,7 +57,7 @@
 
 		<h2>Skin</h2>
 		<div class="container">
-			<p>Update 2024-02-20<br>
+			<p>Update 2024-02-21<br>
 			My first created skin.(notice: it's <b>@2x</b>)<br>
 			Except hitsounds, the other objects are created by me(with gimp tool).<br>
 			Mediafire: <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Download</a><br>
