--- a/pages/osu-personal-introduce.html
+++ b/pages/osu-personal-introduce.html
@@ -22,7 +22,7 @@
 			<p>Hello, there.<br>
 			Welcome to my website.</p>
 			
-			<p>Status: Absolutely not active.</p>
+			<p>Status: May not active.</p>
 			
 			<p>I have two accounts: one for mainly play,<br>
 			the other one for training.<br>
