--- a/pages/osu-personal-introduce.html
+++ b/pages/osu-personal-introduce.html
@@ -24,6 +24,8 @@
 			
 			<p>Status: May not active.</p>
 			
+			<p>I think exercises improve your gameplay(may not fit for all gamer but useful)</p>
+			
 			<p>I have two accounts: one for mainly play,<br>
 			the other one for training.<br>
 			cutt37(Main)<br>
@@ -35,7 +37,7 @@
 			<p>Mouse acceleration:<br>
 			/usr/share/X11/xorg.conf.d</p>
 			
-			<p>50-mouse-accel.cfonf<br>
+			<p>50-mouse-accel.conf<br>
 			Section "InputClass"<br>
 			&emsp;Identifier ""<br>
 			&emsp;Driver "libinput"<br>
