--- a/pages/osu-personal-introduce.html
+++ b/pages/osu-personal-introduce.html
@@ -59,10 +59,16 @@
 
 		<h2>Skin</h2>
 		<div class="container">
-			<p>Update 2024-03-07<br>
-			My first created skin.(notice: it's <b>@2x</b>)<br>
-			Except hitsounds, the other objects are created by me(with gimp tool).<br>
-			Mediafire: <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Download</a><br>
+			<p>Update Release-240308-1.0<br>
+			My first created skin.(notice: Only <b>@2x</b>)</p>
+			
+			<p>Osu is pretty suck.<br>
+			You know what, when I am editing the objects,<br>
+			I test and found that almost every hit objects(under STD) can influence the gameplay.<br>
+			In details, like cursor, if I changed transparent size, 'Unstable Rate' will be influenced.<br>
+			Except hitsounds, the other objects are created by me(with gimp tool).</p>
+			
+			<p>Mediafire: <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Download</a><br>
 			Github: <a href="./pkgs/Idont.osk">Download</a></p>
 		</div>
 
