--- a/pages/osu-personal-introduce.html
+++ b/pages/osu-personal-introduce.html
@@ -59,7 +59,7 @@
 
 		<h2>Skin</h2>
 		<div class="container">
-			<p>Update Release-240308-1.0<br>
+			<p>Version: Release-240308-1.0<br>
 			My first created skin.(notice: Only <b>@2x</b>)</p>
 			
 			<p>Osu is pretty suck.<br>
