--- a/osu-personal-introduce.html
+++ b/osu-personal-introduce.html
@@ -24,6 +24,8 @@
 			
 			<p>Status: May not active.</p>
 			
+			<p>I think exercises improve your gameplay(may not fit for all gamer but useful)</p>
+			
 			<p>I have two accounts: one for mainly play,<br>
 			the other one for training.<br>
 			cutt37(Main)<br>
@@ -35,13 +37,13 @@
 			<p>Mouse acceleration:<br>
 			/usr/share/X11/xorg.conf.d</p>
 			
-			<p>50-mouse-accel.cfonf<br>
+			<p>50-mouse-accel.conf<br>
 			Section "InputClass"<br>
 			&emsp;Identifier ""<br>
 			&emsp;Driver "libinput"<br>
 			&emsp;MatchIsPointer "yes"<br>
 			&emsp;Option "AccelProfile" "<u>flat</u>"<br>
-			&emsp;Option "AccelSpeed" "-0.465"<br>
+			&emsp;Option "AccelSpeed" "-0.48"<br>
 			EndSection</p>
 			
 			<p>You can get your mouse with <u>xinput</u> command.<br>
@@ -57,10 +59,17 @@
 
 		<h2>Skin</h2>
 		<div class="container">
-			<p>Update 2024-03-03<br>
-			My first created skin.(notice: it's <b>@2x</b>)<br>
-			Except hitsounds, the other objects are created by me(with gimp tool).<br>
-			Mediafire: <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Download</a><br>
+			<p>Version: Release-240308-1.0<br>
+			My first created skin.(notice: Only <b>@2x</b>).<br>
+			Btw if the version name doesn't contain 'Test' then you can download.<br>
+			Except hitsounds, the other objects are created by me(with gimp tool).</p>
+			
+			<p>Osu is pretty suck.<br>
+			You know what, when I am editing the objects,<br>
+			I test and found that almost every hit objects(under STD) can influence the gameplay.<br>
+			In details, like cursor, if I changed transparent size, 'Unstable Rate' will be influenced.</p>
+			
+			<p>Mediafire: <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Download</a><br>
 			Github: <a href="./pkgs/Idont.osk">Download</a></p>
 		</div>
 
