--- a/pages/osu-personal-introduce.html
+++ b/pages/osu-personal-introduce.html
@@ -59,14 +59,13 @@
 
 		<h2>Skin</h2>
 		<div class="container">
-			<p>Version: Release-240308-1.0<br>
-			My first created skin.(notice: Only <b>@2x</b>)</p>
+			<p>Version: Release-240309b-1.0<br>
+			My first created skin.(notice: Only <b>@2x</b>).<br>
+			Except hitsounds, the other objects are created by me(with gimp tool).</p>
 			
 			<p>Osu is pretty suck.<br>
 			You know what, when I am editing the objects,<br>
-			I test and found that almost every hit objects(under STD) can influence the gameplay.<br>
-			In details, like cursor, if I changed transparent size, 'Unstable Rate' will be influenced.<br>
-			Except hitsounds, the other objects are created by me(with gimp tool).</p>
+			I test and found that almost every hit objects(under STD) can influence the gameplay.</p>
 			
 			<p>Mediafire: <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Download</a><br>
 			Github: <a href="./pkgs/Idont.osk">Download</a></p>
