--- a/pages/osu-personal-introduce.html
+++ b/pages/osu-personal-introduce.html
@@ -59,7 +59,8 @@
 
 		<h2>Skin</h2>
 		<div class="container">
-			<p>Version: Release-240321<br>
+			<p>Version: Release-240322<br>
+			(The CS looks so small...)<br>
 			My first created skin.(notice: Only <b>@2x</b>).<br>
 			Except hitsounds, the other objects are created by me(with gimp tool).</p>
 			
