--- a/pages/osu-personal-introduce.html
+++ b/pages/osu-personal-introduce.html
@@ -69,7 +69,7 @@
 			I test and found that almost every hit objects(under STD) can influence the gameplay.</p>
 			
 			<p>Mediafire: <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Download</a><br>
-			Github: <a href="./pkgs/Idont.osk">Download</a></p>
+			Github: <a href="./pkgs/Idontknow.osk">Download</a></p>
 		</div>
 
 		<h2>Others</h2>
