--- a/pages/osu-personal-introduce.html
+++ b/pages/osu-personal-introduce.html
@@ -59,14 +59,9 @@
 
 		<h2>Skin</h2>
 		<div class="container">
-			<p>Version: Release-240322<br>
-			(The CS looks so small...)<br>
-			My first created skin.(notice: Only <b>@2x</b>).<br>
-			Except hitsounds, the other objects are created by me(with gimp tool).</p>
-			
-			<p>Osu is pretty suck.<br>
-			You know what, when I am editing the objects,<br>
-			I test and found that almost every hit objects(under STD) can influence the gameplay.</p>
+			<p>Version: Release-240323<br>
+			(The hitcircle looks so small...)<br>
+			Please notice: Only <b>hd(@2x)</b>.</p>
 			
 			<p>Mediafire: <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Download</a><br>
 			Github: <a href="./pkgs/Idontknow.osk">Download</a></p>
