--- a/pages/osu-personal-introduce.html
+++ b/pages/osu-personal-introduce.html
@@ -59,12 +59,18 @@
 
 		<h2>Skin</h2>
 		<div class="container">
-			<p>Version: Release-240324<br>
+			<p>Version: Release-240331<br>
 			(The hitcircle looks so small...)<br>
 			Please notice: Only <b>hd(@2x)</b>.</p>
 			
 			<p>Mediafire: <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Download</a><br>
-			Github: <a href="./pkgs/Idontknow.osk">Download</a></p>
+			From local: <a href="./pkgs/Idontknow.osk">Download</a></p>
+
+			<p>Source:<br>
+			Please don't download this file(except me, cutt37) until I finished this skin, ok?<br>
+			I will make it public with no license.<br>
+			From local: <a href="./pkgs/Container.zip">Download</a></p>
+			</p>
 		</div>
 
 		<h2>Others</h2>
