--- a/index.html
+++ b/index.html
@@ -25,18 +25,17 @@
 		<h1>Notice:</h1>
 		<ol>
 			<li>Download all needed drivers or firmwares by yourself.<br>
-				I won't provide all in details.
-			</li>
+				I won't provide all in details.</li>
 
 			<li>This is a place to save I've learned.</li>
 
 			<li>Still suggest you'd better keep windows.<br>
-				It's pretty hard to find or install packages.
-			</li>
+				It's pretty hard to find or install packages.</li>
 
 			<li>Forgive my bad English, I'm trying my best.</li>
 
-			<li>I won't take any responsibility.</li>
+			<li>If you find some problems on this website, you can mail me.<br>
+			andyjiangmeng@163.com</li>
 		</ol>
 	</div>
 </body>
