--- a/pages/arch/arch.html
+++ b/pages/arch/arch.html
@@ -16,9 +16,9 @@
 
 <body>
 	<div id="Menu">
-		<a href="./" id="current">Home</a>
-		<a href="config" class="available">Config</a>
-		<a href="others" class="available">Others</a>
+		<a href="./" id="current">Arch</a>
+		<a href="./config" class="available">Config</a>
+		<a href="./others" class="available">Others</a>
 	</div>
 	
 	<h1>Archlinux installation</h1>
@@ -100,7 +100,7 @@
 
 			<tr>
 				<td>nvme0n1p3</td>
-				<td>f2fs(or you can use ext4)</td>
+				<td>f2fs(or ext4)</td>
 				<td>Remain</td>
 			</tr>
 			</table>
