--- a/pages/arch/config.html
+++ b/pages/arch/config.html
@@ -16,6 +16,7 @@
 
 <body>
 	<div id="Menu">
+		<a href="../../" id="available">Menu</a>
 		<a href="./arch" id="available">Home</a>
 		<a href="./" id="current">Config</a>
 		<a href="./others" id="available">Others</a>
