--- a/pages/arch/others.html
+++ b/pages/arch/others.html
@@ -16,6 +16,7 @@
 
 <body>
 	<div id="Menu">
+		<a href="../../" id="available">Menu</a>
 		<a href="./arch" id="available">Home</a>
 		<a href="./config" id="available">Config</a>
 		<a href="./" id="current">Others</a>
