--- a/pages/osu/osu-cutt37.html
+++ b/pages/osu/osu-cutt37.html
@@ -48,8 +48,7 @@
 			From local: <a href="../../files/packages/global/Idontknow.osk">Download</a></p>
 
 			<p>Source:<br>
-			Please don't download this file(except me, cutt37) until I finished this skin, ok?<br>
-			I will make it public with no license.<br>
+			Public with no license.<br>
 			From local: <a href="../../files/global/Container.zip">Download</a></p>
 			</p>
 		</div>
