--- a/pages/arch/arch.html
+++ b/pages/arch/arch.html
@@ -23,8 +23,8 @@
 	</div>
 	
 	<h1>Archlinux installation</h1>
+	
 	<div id="Article">
-
 		<h2>Before we start, please notice ...</h2>
 		<div class="container">
 			<ol>
@@ -32,10 +32,9 @@
 
 				<li><b>All</b> your data will be destoryed when you format the disk.</li>
 
-				<li>I suggest you keep windows. It's stable and clear than linux, I think.<br>
+				<li>I suggest you keep windows(if you're a gamer).<br>
+				It's <b>stable</b> than linux, I think.<br>
 				Not recommended start with <b>nothing</b> in <b>any linux</b>.</li>
-
-				<li>Avoid always following my guide, may contain issues.</li>
 
 				<li>Actually <u>archinstall</u> is enough(but I prefer manual install).</li>
 				Just type it in console and it'll start the installation.</li>
