--- a/index.html
+++ b/index.html
@@ -22,10 +22,18 @@
 	</div>
 
 	<div id="Article">
-		<h1>Notice:</h1>
+		<h1>MUST READ:</h1>
 		<ol>
-			<li>Download all needed drivers or firmwares by yourself.<br>
-				I won't provide all in details.</li>
+			<li>Status tag tells you can or not follow the guide.<br>
+				Status: <b>Unstable(updating the website)</b>.</li>
+
+			<li>Don't use wine-mono from any linux provider, doesn't work.<br>
+				But if you can't uninstall it, instead,<br>
+				delete it using winetricks(select the default... &minus;&gt; Run uninstaller),<br>
+				and use winetricks to install dotnet40.</li>
+
+			<li>Download the packages you really <b>need</b>.<br>
+				Do NOT completely follow my guide, some are optional.</li>
 
 			<li>This is a place to save I've learned.</li>
 
