--- a/pages/osu/osu-cutt37.html
+++ b/pages/osu/osu-cutt37.html
@@ -21,7 +21,7 @@
 			<p>Hello, there.<br>
 			Welcome to my website.</p>
 			
-			<p>Status: Not active(Current play: adofai).</p>
+			<p>Status: Not active.</p>
 		</div>
 
 		<h2>Some configs(Any linux)</h2>
@@ -41,7 +41,7 @@
 
 		<h2>Skin</h2>
 		<div class="container">
-			<p>Version: Release-240331<br>
+			<p>Version: Release-240418<br>
 			Please notice: Only <b>hd(@2x)</b>.</p>
 			
 			<p>Mediafire: <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Download</a><br>
