--- a/pages/osu/osu-cutt37.html
+++ b/pages/osu/osu-cutt37.html
@@ -26,7 +26,7 @@
 
 		<h2>Some configs(Any linux)</h2>
 		<div class="container">
-			<p>Mouse acceleration: -0.46(Current)</p>
+			<p>Mouse acceleration: -0.45(Current)</p>
 			
 			<p>50-mouse-acceleration.conf<br>
 			Section "InputClass"<br>
@@ -40,14 +40,14 @@
 
 		<h2>Skin</h2>
 		<div class="container">
-			<p>Version: Release-240423<br>
+			<p>Version: Release-v1-Final<br>
 			Please notice: Only <b>hd(@2x)</b>.</p>
 			
 			<p>Mediafire: <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Download</a><br>
 			From local: <a href="../../files/packages/global/Idontknow.osk">Download</a></p>
 
 			<p>Source:<br>
-			Public with no license.<br>
+			Public, no license.<br>
 			From local: <a href="../../files/global/Container.zip">Download</a></p>
 			</p>
 		</div>
