--- a/index.html
+++ b/index.html
@@ -19,14 +19,12 @@
 		<a href="./" id="current">Home</a>
 		<a href="./pages/arch/arch.html" id="available">Archlinux Installation</a>
 		<a href="./pages/osu/osu-cutt37.html" id="available">My osu! infos</a>
+		<a href="./pages/others/any.html" id="available">Various stuff</a>
 	</div>
 
 	<div id="Article">
 		<h1>MUST READ:</h1>
 		<ol>
-			<li>Status tag tells you can or not follow the guide.<br>
-				Status: <b>Unstable(updating the website)</b>.</li>
-
 			<li>Don't use wine-mono from any linux provider, doesn't work.<br>
 				But if you can't uninstall it, instead,<br>
 				delete it using winetricks(select the default... &minus;&gt; Run uninstaller),<br>
