--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	</div>
 
 	<div id="Article">
-		<h1>MUST READ:</h1>
+		<h1>Read before:</h1>
 		<ol>
 			<li>Don't use wine-mono from any linux provider, doesn't work.<br>
 				But if you can't uninstall it, instead,<br>
