--- a/pages/arch/arch.html
+++ b/pages/arch/arch.html
@@ -28,6 +28,9 @@
 		<h2>Before we start, please notice ...</h2>
 		<div class="container">
 			<ol>
+				<li>Status tag tells you can or not follow the guide.<br>
+				Status: <b>Unstable(updating the website)</b>.</li>
+
 				<li>This is NOT two os installation guide(certainly).</li>
 
 				<li><b>All</b> your data will be destoryed when you format the disk.</li>
