--- a/pages/others/any.html
+++ b/pages/others/any.html
@@ -19,8 +19,7 @@
 		<h2>Fixing stuff</h2>
 		<div class="container">
 			<p>Well, to practice my gimp skill.<br>
-			I like this wallpaper, but the details looks terrible.<br>
-			So I fixed it.</p>
+			I like this wallpaper, but the origin one looks terrible so I fixed it.</p>
 
 			<p>Mediafire: <a href="https://mediafire.com/file/b4xr1gswoqd3x3p/Kano.xcf/file">Download</a></p>
 		</div>
