--- a/pages/osu/osu-cutt37.html
+++ b/pages/osu/osu-cutt37.html
@@ -41,8 +41,8 @@
 		<h2>Skin</h2>
 		<div class="container">
 			<p>Version: Release-v1-Final<br>
-			It works pretty fine, I fixed the followpoint.<br>
-			Please notice: Only <b>hd(@2x)</b>.</p>
+			It works pretty fine.<br>
+			Notice: hd(@2x), std and mania only.</p>
 			
 			<p>Mediafire: <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Download</a><br>
 			From local: <a href="../../files/packages/global/Idontknow.osk">Download</a></p>
