--- a/pages/osu/osu-cutt37.html
+++ b/pages/osu/osu-cutt37.html
@@ -21,7 +21,7 @@
 			<p>Hello, there.<br>
 			Welcome to my website.</p>
 			
-			<p>Status: Not active.</p>
+			<p>Status: Not active(I'm not sure).</p>
 		</div>
 
 		<h2>Some configs(Any linux)</h2>
@@ -40,7 +40,7 @@
 
 		<h2>Skin</h2>
 		<div class="container">
-			<p>Version: Release-v1-Final<br>
+			<p>Version: Release-v2-0512<br>
 			It works pretty fine.<br>
 			Notice: hd(@2x), std and mania only.</p>
 			
