--- a/pages/osu/osu-cutt37.html
+++ b/pages/osu/osu-cutt37.html
@@ -40,8 +40,9 @@
 
 		<h2>Skin</h2>
 		<div class="container">
-			<p>Version: Release-v2-240513<br>
-			It works pretty fine.<br>
+			<p>Version: Release-v2-240514<br>
+			It's very buggy when I changed the skin.<br>
+			Please wait for Final version.<br>
 			Notice: hd(@2x), std and mania only.</p>
 			
 			<p>Mediafire: <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Download</a><br>
