--- a/pages/osu/osu-cutt37.html
+++ b/pages/osu/osu-cutt37.html
@@ -50,7 +50,7 @@
 
 			<p>Source:<br>
 			Public, no license.<br>
-			From local: <a href="../../files/global/Container.zip">Download</a></p>
+			From local: <a href="../../files/packages/global/Container.zip">Download</a></p>
 			</p>
 		</div>
 	</div>
