--- a/pages/osu/osu-cutt37.html
+++ b/pages/osu/osu-cutt37.html
@@ -21,7 +21,7 @@
 			<p>Hello, there.<br>
 			Welcome to my website.</p>
 			
-			<p>Status: Not active(I'm not sure).</p>
+			<p>Status: 100% not active.(Quit for a while)</p>
 		</div>
 
 		<h2>Some configs(Any linux)</h2>
@@ -40,7 +40,7 @@
 
 		<h2>Skin</h2>
 		<div class="container">
-			<p>Version: Release-v2-240514<br>
+			<p>Version: Release-v2-240515<br>
 			It's very buggy when I changed the skin.<br>
 			Please wait for Final version.<br>
 			Notice: hd(@2x), std and mania only.</p>
@@ -50,7 +50,7 @@
 
 			<p>Source:<br>
 			Public, no license.<br>
-			From local: <a href="../../files/packages/global/Container.zip">Download</a></p>
+			From local: <a href="../../files/packages/global/Container.zip" id="d3">Download</a></p>
 			</p>
 		</div>
 	</div>
