--- a/pages/osu/osu-cutt37.html
+++ b/pages/osu/osu-cutt37.html
@@ -26,7 +26,7 @@
 
 		<h2>Some configs(Any linux)</h2>
 		<div class="container">
-			<p>Mouse acceleration: -0.45(Current)</p>
+			<p>Mouse acceleration: -0.46(Current)</p>
 			
 			<p>50-mouse-acceleration.conf<br>
 			Section "InputClass"<br>
@@ -40,9 +40,9 @@
 
 		<h2>Skin</h2>
 		<div class="container">
-			<p>Version: Release-v2-240515<br>
-			It's very buggy when I changed the skin.<br>
-			Please wait for Final version.<br>
+			<p>Version: Release-v2-240516S<br>
+			S(table) means I will stop update for a long time.<br>
+			F(inal) means the last update at version x.x<br>
 			Notice: hd(@2x), std and mania only.</p>
 			
 			<p>Mediafire: <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Download</a><br>
