--- a/pages/osu/osu-cutt37.html
+++ b/pages/osu/osu-cutt37.html
@@ -40,8 +40,7 @@
 
 		<h2>Skin</h2>
 		<div class="container">
-			<p>Version: Release-v2-240516S<br>
-			S(table) means I will stop update for a long time.<br>
+			<p>Version: Release-v2-240517<br>
 			F(inal) means the last update at version x.x<br>
 			Notice: hd(@2x), std and mania only.</p>
 			
