--- a/pages/osu/osu-cutt37.html
+++ b/pages/osu/osu-cutt37.html
@@ -21,12 +21,12 @@
 			<p>Hello, there.<br>
 			Welcome to my website.</p>
 			
-			<p>Status: 100% not active.(Quit for a while)</p>
+			<p>Status: Not active(Rest)</p>
 		</div>
 
 		<h2>Some configs(Any linux)</h2>
 		<div class="container">
-			<p>Mouse acceleration: -0.46(Current)</p>
+			<p>Mouse acceleration: -0.45(Current)</p>
 			
 			<p>50-mouse-acceleration.conf<br>
 			Section "InputClass"<br>
